minor project clean up

--- a/ImageCabinet.csproj
+++ b/ImageCabinet.csproj
@@ -15,4 +15,8 @@
     <EmbeddedResource Include="icons\*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove=".gitignore" />
+  </ItemGroup>
+
 </Project>
