Config gets read/saved in %appdata%

--- a/ImageCabinet.csproj
+++ b/ImageCabinet.csproj
@@ -44,6 +44,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </None>
+    <None Update="themes\Kiwi.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="themes\Vaporwave.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
